tests/ascribe-17/out.txt
error: mismatched types: expected t, found t
   ┌─ err.sml:24:9
   │
24 │ val _ = B.bar A.foo
   │         ^^^^^^^^^^^

typechecking failed
